<resources>
    <string name="app_name">Rick-And-Morty-Pro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="characters">Characters</string>
    <string name="episodes">Episodes</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore…</string>
    <string name="all_seasons">All seasons</string>
    <string name="season_1">Season 1</string>
    <string name="season_2">Season 2</string>
    <string name="season_3">Season 3</string>
    <string name="season_4">Season 4</string>
    <string name="season_5">Season 5</string>
    <string name="add_your_favorites">Add your favorites</string>
    <string name="status">Status</string>
    <string name="species">Species</string>
    <string name="type">Type</string>
    <string name="gender">Gender</string>
    <string name="origin">Origin</string>
    <string name="location">Location</string>
    <string name="show_more">Show more</string>
    <string name="locations">Locations</string>
    <string name="results">Results</string>
    <string name="you_have_no_favourite_character_yet">You have no favourite character yet</string>
    <string name="you_have_no_favourite_episode_yet">You have no favourite episode yet</string>
    <string name="you_have_no_favourite_character_nor_episode_yet">You have no favourite character nor episode yet</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="_20m">20m</string>
    <string name="show_less">Show less</string>
    <string name="added_fav">Character is added to your favorites!</string>
    <string name="added_fav_ep">Episode is added to your favorites!</string>



</resources>