<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.egeperk.rick_and_morty_pro.view.detail.DetailViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/header_ly">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/header_ly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/app_black"
                app:layout_constraintTop_toTopOf="parent"
                tools:context=".view.detail.character.DetailFragment">


                <ImageView
                    android:id="@+id/back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:padding="20dp"
                    android:rotation="180"
                    android:src="@drawable/ic_vector_arrow"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="?attr/colorOnPrimary" />

                <TextView
                    android:id="@+id/char_name"
                    style="@style/Typography.Bold.Body.20"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingVertical="14dp"
                    android:text="@{viewModel.character.name}"
                    android:textAlignment="center"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Rick Sanchez" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/char_ly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_graident_bg"
                app:layout_constraintTop_toBottomOf="@id/header_ly">


                <androidx.cardview.widget.CardView
                    android:id="@+id/char_image_card"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="44dp"
                    android:layout_marginTop="16dp"
                    android:elevation="0dp"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/char_image"
                        android:layout_width="287dp"
                        android:layout_height="288dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_launcher_background"
                        app:imageUrl="@{viewModel.character.image}" />
                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:id="@+id/fav_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@id/char_image_card">

                    <ImageView
                        android:id="@+id/fav_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_star"
                        app:tint="@color/green" />

                    <TextView
                        android:id="@+id/add_to_favs_tv"
                        style="@style/Typography.Regular.16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/add_your_favorites"
                        android:textColor="@color/green" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/details_ly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="22dp"
                    android:layout_weight="3"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fav_btn">

                    <TextView
                        style="@style/Typography.Regular.12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_card_upper_bg"
                        android:text="@string/status"
                        android:textColor="?attr/colorOnPrimary" />

                    <TextView
                        android:id="@+id/status"
                        style="@style/Typography.Regular.Body.20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_card_lower_bg"
                        android:text="@{viewModel.character.status}"
                        android:textColor="?attr/colorOnPrimary"
                        tools:text="Alive" />

                    <TextView
                        style="@style/Typography.Regular.12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/custom_card_upper_bg"
                        android:text="@string/species"
                        android:textColor="?attr/colorOnPrimary" />

                    <TextView
                        android:id="@+id/species"
                        style="@style/Typography.Regular.Body.20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_card_lower_bg"
                        android:text="@{viewModel.character.species}"
                        android:textColor="?attr/colorOnPrimary"
                        tools:text="Alive" />

                    <TextView
                        style="@style/Typography.Regular.12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/custom_card_upper_bg"
                        android:text="@string/type"
                        android:textColor="?attr/colorOnPrimary" />

                    <TextView
                        android:id="@+id/type"
                        style="@style/Typography.Regular.Body.20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_card_lower_bg"
                        android:text="@{viewModel.character.type}"
                        android:textColor="?attr/colorOnPrimary"
                        tools:text="Alive" />

                    <TextView
                        style="@style/Typography.Regular.12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/custom_card_upper_bg"
                        android:text="@string/gender"
                        android:textColor="?attr/colorOnPrimary" />

                    <TextView
                        android:id="@+id/gender"
                        style="@style/Typography.Regular.Body.20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_card_lower_bg"
                        android:text="@{viewModel.character.gender}"
                        android:textColor="?attr/colorOnPrimary"
                        tools:text="Alive" />

                    <TextView
                        style="@style/Typography.Regular.12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/custom_card_upper_bg"
                        android:text="@string/origin"
                        android:textColor="?attr/colorOnPrimary" />

                    <TextView
                        android:id="@+id/origin"
                        style="@style/Typography.Regular.Body.20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_card_lower_bg"
                        android:text="@{viewModel.character.origin.name}"
                        android:textColor="?attr/colorOnPrimary"
                        tools:text="Alive" />

                    <TextView
                        style="@style/Typography.Regular.12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/custom_card_upper_bg"
                        android:text="@string/location"
                        android:textColor="?attr/colorOnPrimary" />

                    <TextView
                        android:id="@+id/location"
                        style="@style/Typography.Regular.Body.20"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/custom_card_lower_bg"
                        android:text="@{viewModel.character.location.name}"
                        android:textColor="?attr/colorOnPrimary"
                        tools:text="Alive" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/episode_ly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/char_ly">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/episode_btn_ly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="34dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/episode_header"
                        style="@style/Typography.Bold.Body.20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingVertical="2dp"
                        android:text="@string/episodes"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/episode_count"
                        style="@style/Typography.Bold.Body.16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:background="@drawable/custom_count_bg_selector"
                        android:gravity="center"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="4dp"
                        android:text="@{String.valueOf(viewModel.character.episode.size())}"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/episode_header"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="80" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/ic_vector_arrow"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/episode_count"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/episode_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="16dp"
                    android:nestedScrollingEnabled="false"
                    android:overScrollMode="never"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/episode_btn_ly"
                    tools:listitem="@layout/episode_row" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>