<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.egeperk.rick_and_morty_pro.view.favorites.FavoritesViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.favorites.FavoritesFragment">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:padding="20dp"
                android:rotation="180"
                android:src="@drawable/ic_vector_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/favorites_header"
                style="@style/Typography.Bold.Body.20"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="14dp"
                android:text="@string/favorites"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/character_btn_ly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/favorites_header">

                <TextView
                    android:id="@+id/character_header"
                    style="@style/Typography.Bold.Body.20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="2dp"
                    android:text="@string/characters"

                    />

                <TextView
                    android:id="@+id/character_count"
                    style="@style/Typography.Bold.Body.16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/custom_count_bg_selector"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:text="@{viewModel.characterCount.toString()}"
                    app:layout_constraintStart_toEndOf="@id/character_header"
                    tools:text="80" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_vector_arrow" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/character_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="12dp"
                android:orientation="vertical"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/character_btn_ly"
                app:spanCount="2" />

            <LinearLayout
                android:id="@+id/episode_btn_ly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/character_rv">

                <TextView
                    android:id="@+id/episodes_header"
                    style="@style/Typography.Bold.Body.20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="2dp"
                    android:text="@string/episodes" />

                <TextView
                    android:id="@+id/episodes_count"
                    style="@style/Typography.Bold.Body.16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/custom_count_bg_selector"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="4dp"
                    android:text="@{viewModel.episodeCount.toString()}"
                    app:layout_constraintStart_toEndOf="@id/episodes_header"
                    app:layout_constraintTop_toBottomOf="@id/character_rv"
                    tools:text="80" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_vector_arrow" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/episodes_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="12dp"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/episode_btn_ly" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>