<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.egeperk.rick_and_morty_pro.view.home.HomeViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_ly"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".view.search.SearchFragment">

        <LinearLayout
            android:translationZ="90dp"
            android:background="@color/loading_gray"
            android:visibility="invisible"
            android:id="@+id/loading_ly"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateDrawable="@drawable/custom_progress_bar"
                android:indeterminateDuration="1000">

            </ProgressBar>

        </LinearLayout>

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="20dp"
            android:rotation="180"
            android:src="@drawable/ic_vector_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/search_header"
            style="@style/Typography.Bold.Body.20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="14dp"
            android:text="@string/search"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:text="@={viewModel.search}"
            android:id="@+id/search_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_edit_text_selector"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="16dp"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="@color/hint_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_header" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/search_rv_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            android:elevation="0dp"
            app:cardBackgroundColor="?attr/colorOnPrimary"
            app:layout_constraintTop_toBottomOf="@id/search_bar"
            app:layout_constraintVertical_bias="0"
            app:strokeColor="@color/green"
            app:strokeWidth="1dp">

            <androidx.recyclerview.widget.RecyclerView
                tools:visibility="gone"
                android:overScrollMode="never"
                android:id="@+id/search_text_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/search_row" />

        </com.google.android.material.card.MaterialCardView>


        <androidx.core.widget.NestedScrollView
            android:overScrollMode="never"
            android:id="@+id/item_ly"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/search_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:visibility="gone"
            android:id="@+id/character_btn_ly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/character_header"
                style="@style/Typography.Bold.Body.20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="2dp"
                android:text="@string/characters"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/character_count"
                style="@style/Typography.Bold.Body.16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/custom_count_bg_selector"
                android:gravity="center"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/character_header"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="80" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_vector_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/character_count"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:focusableInTouchMode="true"
            android:overScrollMode="never"
            android:id="@+id/search_result_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/character_btn_ly"
            app:spanCount="2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:visibility="gone"
            android:id="@+id/episode_btn_ly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_result_rv">

            <TextView
                android:id="@+id/episode_header"
                style="@style/Typography.Bold.Body.20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="2dp"
                android:text="@string/episodes"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/episode_count_tv"
                style="@style/Typography.Bold.Body.16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/custom_count_bg_selector"
                android:gravity="center"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/episode_header"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="80" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_vector_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/episode_count_tv"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:focusableInTouchMode="true"
            android:overScrollMode="never"
            android:id="@+id/episode_result_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/episode_btn_ly" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>